--- a/project/myCrossing/src/app/autenticacion/login/login.component.html
+++ b/project/myCrossing/src/app/autenticacion/login/login.component.html
@@ -1,48 +1,59 @@
 <div class="background">
   <div class="movil">
-    <div class="pantalla">
+    <div class="pantalla ">
+      <div class="movil-grande">
+        <div class="flex-between top-movil">
+          <img src="../../../assets/images/nookphone-izq.PNG" style="width: 20%;">
+          <img src="../../../assets/images/nookphone-dcha.PNG" style="width: 10%;">
+        </div>
+      </div>
       <form class="formulario" (ngSubmit)="login(loginForm)" [formGroup]="loginForm">
         <div class="titulo">
           Inicia sesión
         </div>
-        <div class="field">
-          <div class="fieldlabel">
-            <label for="email">Email: </label>
+        <div style="margin: 10% auto;width:80%">
+          <div class="field flex-between">
+            <div>
+              <label for="email">Email: </label>
+            </div>
+            <div>
+              <input id="email" class="text-input" formControlName='email' type="email">
+            </div>
           </div>
-          <div class="fieldinput">
-            <input id="email" class="text-input" formControlName='email' type="email">
+          <ng-container *ngIf="loginForm.controls.email.errors && submitted">
+            <p class="error">
+              <ng-container *ngIf="loginForm.controls.email.errors.required && submitted">
+                Debe introducir un email.
+              </ng-container>
+            </p>
+          </ng-container>
+          <div class="field flex-between">
+            <div>
+              <label for="password">Contraseña: </label>
+            </div>
+            <div>
+              <input type="password" class="text-input" id="password" formControlName='clave'>
+            </div>
           </div>
+          <ng-container *ngIf="loginForm.controls.clave.errors && submitted">
+            <p class="error">
+              <ng-container *ngIf="loginForm.controls.clave.errors.required && submitted">
+                Debe introducir una contraseña.
+              </ng-container>
+            </p>
+          </ng-container>
         </div>
-        <ng-container *ngIf="loginForm.controls.email.errors && submitted">
-          <p class="error">
-            <ng-container *ngIf="loginForm.controls.email.errors.required && submitted">
-              Debe introducir un email.
-            </ng-container>
-          </p>
-        </ng-container>
-        <div class="field">
-          <div class="fieldlabel">
-            <label for="password">Contraseña: </label>
-          </div>
-          <div class="fieldinput">
-            <input type="password" class="text-input" id="password" formControlName='clave'>
-          </div>
-        </div>
-        <ng-container *ngIf="loginForm.controls.clave.errors && submitted">
-          <p class="error">
-            <ng-container *ngIf="loginForm.controls.clave.errors.required && submitted">
-              Debe introducir una contraseña.
-            </ng-container>
-          </p>
-        </ng-container>
+
         <div class="iniciar">
-          <button type="submit">Iniciar sesion</button>
+          <button class="boton-alargado b-azul" type="submit">Iniciar sesion</button>
+        </div>
+        <div class="flex-centered" style="width: 10%;margin:5% auto;justify-content: space-evenly;">
+          <div class="botonmovil azul">
+          </div>
+          <div class="botonmovil">
+          </div>
         </div>
       </form>
-      <div class="menu">
-        <div class="botonmovil">
-        </div>
-      </div>
     </div>
   </div>
 </div>
