--- a/project/myCrossing/src/app/autenticacion/registro/registro.component.css
+++ b/project/myCrossing/src/app/autenticacion/registro/registro.component.css
@@ -1,102 +1,88 @@
 .titulo{
-  font-size: 2vw;
   text-align: center;
   margin-bottom: 3%;
 }
-
 .error{
   font-size: 1vw;
-  padding-left: 10%;
   margin-bottom: 2%;
   color: red;
-}
 
+}
 .field{
-  padding-left: 10%;
-  width: 100%;
   display: flex;
   margin-bottom: 2%;
 }
 
-.fieldlabel{
-  width: 8vw;
-}
-
-.fruta{
-  width: 4vw;
-}
-
-.radioinputs input{
-  width: 1vw;
-  height: 1vw;
-}
-
-.fieldinput{
-  text-align: right;
-  width: 5vw;
-  margin-left: 15%;
-}
-
-input{
-  font-size: 1vw;
+label{
+  font-size: 1.2vw;
 }
 
 .registrar{
-  margin-bottom: 3%;
-  margin-top: 3%;
   text-align: center;
 }
-
 .pantalla{
-  border-style: solid;
-  border-radius: 10%;
-  border-color: black;
-  border-width: 1.5px;
+  border-style: none;
+  border-radius: 100px;
   padding: 3% 3% 2% 3%;
-  background-color: rgb(210, 255, 214);
+  background-color: #fbf9ec;
+}
+
+.movil-grande{
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.top-movil{
+  margin:auto;
+  width: 75%;
+  margin-top:5%;
+  position: absolute;
 }
 
 .menu{
   width: 100%;
   text-align: center;
 }
-
 button{
-  font-size: 1vw;
-}
-
-.botonmovil{
-  padding: 7% 7% 7% 7%;
-  margin: 5% 0% 0% 42%;
-  border-style: solid;
-  border-radius: 100%;
-  border-color: black;
-  border-width: 1.5px;
-  background-color: #ceebaf;
-  width: 1%;
-  margin-top: 5%;
+  font-size: 1.2vw;
 }
 
 .formulario{
-border-style: solid;
-border-radius: 10%;
-border-color: black;
-border-width: 1.5px;
-background-color: #fffec2;
+  border-style: none;
+  border-radius: 100px;
+  background-color: #fbf9ec;
+  padding-top: 10%;
 }
 
 .movil{
-  padding: 2vw 30% 0% 30%;
+  padding: 2vw 30vw;
+}
+
+.botonmovil{
+  border-radius: 100%;
+  background-color: #e0d9cf;
+  width: 1vh;
+  height: 1vh;
+}
+
+.azul{
+  border-style: solid;
+  border-width: 5%;
+  border-color: #21a0ad;
 }
 
 .background{
   height: 100%;
+  background-image: url("../../../assets/images/caracola-blur.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #c9f3f3;
-  font-size: 1vw;
+  font-size: 2vw;
   padding: 5vw 0;
 }
 
-.aviso{
-  width: 100%;
-  text-align: center;
+.img-radio{
+  width: 2vw;
+  height: 2vw;
 }
