--- a/project/myCrossing/src/app/autenticacion/registro/registro.component.css
+++ b/project/myCrossing/src/app/autenticacion/registro/registro.component.css
@@ -25,6 +25,11 @@ label{
   border-radius: 100px;
   padding: 3% 3% 2% 3%;
   background-color: #fbf9ec;
+  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+}
+
+.text-input{
+  background-color: #d9f6f6;
 }
 
 .movil-grande{
