--- a/project/myCrossing/src/app/autenticacion/login/login.component.html
+++ b/project/myCrossing/src/app/autenticacion/login/login.component.html
@@ -16,7 +16,7 @@
             <div>
               <label for="email">Email: </label>
             </div>
-            <div>
+            <div class="flex-centered" style="width: 60%;">
               <input id="email" class="text-input" formControlName='email' type="email">
             </div>
           </div>
@@ -31,7 +31,7 @@
             <div>
               <label for="password">Contraseña: </label>
             </div>
-            <div>
+            <div class="flex-centered" style="width: 60%;">
               <input type="password" class="text-input" id="password" formControlName='clave'>
             </div>
           </div>
