--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.css
@@ -103,6 +103,7 @@ h2, span{
   border-radius: 15px;
   background-color: #F7F3E8;
   box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+  z-index: 5;
 }
 .datos{
   margin-top: 1vw;
