--- a/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
+++ b/project/myCrossing/src/app/cat-insectos/cat-insectos.component.html
@@ -113,8 +113,15 @@
       </ng-container>
   </div>
 
+  <ng-container *ngIf="(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter | paginacion:page_number:max_items).length == 0" >
+    <div class="flex-column-centered" style="margin: 3% 0">
+      <img src="../../assets/images/error.png" style="width: 10vw;">
+      <p><strong>No hubo resultados</strong></p>
+    </div>
+  </ng-container>
+
   <!-- Paginacion abajo -->
-  <div class="pag-menu flex-centered">
+  <div class="pag-menu flex-centered" [style.padding-top]="(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter | paginacion:page_number:max_items).length < 6 ? '14vw' : '0' ">
     <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
     <ng-container *ngIf="this.getPaginas(listaCreatures | filtroCategoria:filtroAcWhe:filtroAcWe | filtroAc:nameFilter).length < 25; else paginacionComprimida">
