--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -38,6 +38,7 @@ label{
   border-radius: 15px;
   font-size: 1.2vw;
   box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+  z-index: 5;
 }
 
 .editar{
