--- a/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
+++ b/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
@@ -57,11 +57,11 @@
       <div>
 
         <div class="contenedor-vecino" (mouseenter)="toggleVecino(vecino)">
-          <img [src]="vecino.imgIcon" class="icono" (click)="abreMenu($event, vecino, false)">
+          <img [src]="vecino.imgIcon" class="icono" (click)="abreMenu($event, vecino, false, null)">
           <div class="wrap-vecino">
             <button [hidden]="!porcentajeMode" (click)="toggleExclude(data.indexOf(vecino))" class="exclude-button" [style]="{'background-image': checkExclude(data.indexOf(vecino))}"></button>
             <span>{{vecino.nombre}}</span>
-            <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;" (click)="abreMenu($event, vecino, true)">
+            <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;" (click)="abreMenu($event, vecino, true, this.data.indexOf(vecino))">
               {{vecino.amistad}}
             </button>
           </div>
@@ -82,7 +82,7 @@
     <ng-template #vacio>
       <div>
         <div class="contenedor-vecino">
-          <button class="b-bold boton-circular b-amarillo" id="añadir" (click)="abreMenu($event, null, false)">+</button>
+          <button class="b-bold boton-circular b-amarillo" id="añadir" (click)="abreMenu($event, null, false, null)">+</button>
         </div>
         <p [hidden]="!porcentajeMode" style="visibility: hidden;">%</p>
       </div>
@@ -90,4 +90,4 @@
   </ng-container>
 </div>
 
-<app-vecino-menu [vecinoMenu]="this.vecinoMenu" (crear)="crearVecino($event)" (actualizarVecino)="actualizaVecino($event)" (actualizarAmistad)="actualizaAmistadVecino($event)" (borrar)="borraVecino($event)" (clickOutside)="cierraMenu(null)"></app-vecino-menu>
+<app-vecino-menu [vecinoMenu]="this.vecinoMenu" [style.position]="position ? 'fixed' : 'absolute'" (crear)="crearVecino($event)" (actualizarVecino)="actualizaVecino($event)" (actualizarAmistad)="actualizaAmistadVecino($event)" (borrar)="borraVecino($event)" (clickOutside)="cierraMenu(null)"></app-vecino-menu>
