--- a/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.css
+++ b/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.css
@@ -1,12 +1,12 @@
 :host{
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  z-index: 5;
 }
 .lista{
   display: flex;
   flex-wrap: wrap;
   overflow-y: scroll;
-  height: 30vh;
+  height: 100%;
   margin: 1vw 0;
 }
 .elementList{
@@ -20,6 +20,12 @@
   padding: 4%;
 }
 
+.amistad-popup{
+  width: fit-content;
+  height: 17vw;
+  padding:40%
+}
+
 #botones{
   justify-content: space-around;
 }
@@ -28,7 +34,3 @@
   background-image: url("../../../../assets/images/corazon.png");
   filter: drop-shadow(2px -1px 0 #F7F3E8) drop-shadow(-2px 0px 0 #F7F3E8) drop-shadow(1px 2px 0 #F7F3E8);
 }
-
-/* .popup-menu > form > label{
-  margin: 0 0.5vw;
-} */
