--- a/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
+++ b/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
@@ -26,29 +26,28 @@
 <div class="popup-menu amistad-popup" style="display:none" #menuAmistad>
   <form [formGroup]="amistadForm" class="flex-column-centered" style="justify-content: space-around;height: 100%;" (ngSubmit)="enviar(amistadForm.value, true)">
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad6" type="radio" value="6">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">6</button>
+      <input #am6 formControlName="amistad" class="radio-hidden" id="rad6" type="radio" value="6">
+      <button (click)="am6.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">6</button>
     </label>
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad5" type="radio" value="5">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">5</button>
+      <input #am5 formControlName="amistad" class="radio-hidden" id="rad5" type="radio" value="5">
+      <button (click)="am5.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">5</button>
     </label>
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad4" type="radio" value="4">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">4</button>
+      <input #am4 formControlName="amistad" class="radio-hidden" id="rad4" type="radio" value="4">
+      <button (click)="am4.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">4</button>
     </label>
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad3" type="radio" value="3">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">3</button>
+      <input #am3 formControlName="amistad" class="radio-hidden" id="rad3" type="radio" value="3">
+      <button (click)="am3.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">3</button>
     </label>
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad2" type="radio" value="2">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">2</button>
+      <input #am2 formControlName="amistad" class="radio-hidden" id="rad2" type="radio" value="2">
+      <button (click)="am2.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">2</button>
     </label>
     <label>
-      <input formControlName="amistad" class="radio-hidden" id="rad1" type="radio" value="1">
-      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">1</button>
+      <input #am1 formControlName="amistad" class="radio-hidden" id="rad1" type="radio" value="1">
+      <button (click)="am1.click()" class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">1</button>
     </label>
-    <button [disabled]="amistadForm.invalid" class="boton-imagen save" style="width: 1.5vw;height: 1.5vw;" type="submit"></button>
   </form>
 </div>
